--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       type="image/png"
       sizes="180x180"
     />
-    <title>Initial Template Dashboard</title>
+    <title>Estudio Contable - Adeudados</title>
   </head>
   <body>
     <div id="root"></div>
